--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
       - uses: actions/checkout@v3 
 
       - name: 'login to docker hub'
-        run: docker login --username mostafaelsheref --password dckr_pat_Qgvg_79k6gZ2NvwCXeqbUuGBtt8   
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}   
 
