--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,4 +16,9 @@ jobs:
 
       - name: 'login to docker hub'
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}   
+      
+      - name: "Building docker img"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myimg .
 
+      - name: "pushing to Dockerhub"
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myimg  
