--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}   
       
       - name: "Building docker img"
-        run: docker build -t mostafaelsheref/myimg .
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/myimg .
 
       - name: "pushing to Dockerhub"
-        run: docker push mostafaelsheref/myimg 
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/myimg 
